# template-cross-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  android-build.bat
crossTemplateApp/: CMakeLists.txt
crossTemplateApp/src/: main.cpp
crossTemplateLib/: CMakeLists.txt
crossTemplateLib/include/: NativeLib.h
crossTemplateLib/src/: NativeLib.cpp
